--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Nathan McCarty <nathan@mccarty.io>"]
 edition = "2018"
 keywords = ["encryption", "compression","deduplication","backup","archive"]
 description = "Core data structures used by the asuran archive format"
+readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
