--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["encryption", "compression","deduplication","backup","archive"]
 readme = "README.md"
 
 [dependencies]
-asuran-chunker = { version = "^0.0.7", path = "../asuran-chunker/", features = ["streams"] }
+asuran-chunker = { version = "^0.0.8-dev", path = "../asuran-chunker/", features = ["streams"] }
 asuran-core = { version = "^0.0.7", path = "../asuran-core/" }
 async-trait = "0.1.24"
 base64 = "0.11.0"
