--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ test:coverage:
       - target
   tags:
     - linux
-  needs: ["test:test:linux"]
+  needs: ["test:lint:rustfmt"]
 
 build:build:linux:
   stage: build
@@ -143,7 +143,7 @@ build:bench:linux:
       - target
   tags:
     - linux
-  needs: ["build:build:linux"]
+  needs: ["test:lint:rustfmt"]
   only:
     - master
     - tags
