--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,6 @@ test:test:linux:
   tags:
     - linux
   needs: ["test:lint:rustfmt"]
-  allow_failure: true
   artifacts:
     paths:
       - linux.xml
@@ -57,8 +56,7 @@ test:test:windows:
     - choco install rust-ms -y
     - cargo --version
     - rustc --version
-    - cargo install cargo-junit
-    - cargo junit --name windows.xml
+    - cargo test
   cache:
     key: "$CI_COMMIT_REF_SLUG-test"
     paths:
@@ -67,7 +65,6 @@ test:test:windows:
   tags:
     - windows
   needs: ["test:lint:rustfmt"]
-  allow_failure: true
   only:
     - master
     - tags
