--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -171,7 +171,7 @@ build:bench:windows:
       - target
   tags:
     - windows
-  needs: ["build:build:windows"]
+  needs: ["test:lint:rustfmt"]
   only:
     - master
     - tags
