--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,8 @@ test:test:linux:
 test:test:windows:
   stage: test
   script:
-    - choco install rust-ms -y
+    - choco install rustup.install -y
+    - rustup toolchain default stable-msvc
     - cargo --version
     - rustc --version
     - cargo test
