--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ test:test:linux:
 test:test:windows:
   stage: test
   script:
-    - choco install rustup.install -y
+    - choco install rustup.install -y --ignore-checksums
     - rustup toolchain default stable-msvc
     - cargo --version
     - rustc --version
