chore: Relicense under BSD 2 Clause + Patent
This license has all the spirit of MIT with the patent trolling protection of Apache2, without the
annoying restriction of losing patent protections if you forget to note that you changed code.

Closes #51

--- a/asuran-chunker/Cargo.toml
+++ b/asuran-chunker/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "asuran-chunker"
 description = "A general API for describing types that can break data in to chunks in repeatable ways"
-license = "MIT"
+license = "BSD-2-Clause-Patent"
 version = "0.0.8-dev"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran"
