(cargo-release) version {{version}}

--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -2,7 +2,7 @@
 name = "asuran-cli"
 description = "Deduplicating, secure, tamper resistant archiver"
 license = "BSD-2-Clause-Patent"
-version = "0.0.8-dev"
+version = "0.0.8"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran-cli"
 homepage = "https://asuran.rs"
