--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -2,7 +2,7 @@
 name = "asuran-cli"
 description = "Deduplicating, secure, tamper resistant archiver"
 license = "BSD-2-Clause-Patent"
-version = "0.0.8"
+version = "0.0.9-dev"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran-cli"
 homepage = "https://asuran.rs"
@@ -16,7 +16,7 @@ anyhow = "1.0.27"
 chrono = "0.4.11"
 clap = { version = "2.33.0", features = ["yaml"] }
 futures = "0.3.4"
-asuran = { version = "^0.0.8-dev", path = "../asuran" }
+asuran = { version = "0.0.9-dev", path = "../asuran" }
 prettytable-rs = "0.8.0"
 read_input = "0.8.4"
 rpassword = "4.0.5"
