--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "asuran-core"
 license = "BSD-2-Clause-Patent"
-version = "0.0.8"
+version = "0.0.9-dev"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran"
 homepage = "https://asuran.rs"
