--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -48,6 +48,7 @@ sha2 = { version = "0.8.1", optional = true }
 sha3 = { version = "0.8.2", optional = true }
 stream-cipher = "0.3.2"
 thiserror = "1.0.11"
+tracing = "0.1.13"
 uuid = "0.8.1"
 xz2 = { version = "0.1.6", optional = true }
 zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
