ci: Move tarpaulin back to my own executor
The tarpaulin docker container requires security settings that are incompatible with the gitlab
shared executor. Move it back to my own executor.

Additionally, configure it to allow failure, in case tarp derps.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,8 @@ test:coverage:
       - ~/.cargo
       - target
   tags:
-    - linux
+    - linux-own
+  allow_failure: true
   needs: ["test:lint:rustfmt"]
 
 build:build:linux:
