--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,8 @@ test:coverage:
   script:
     - apt-get update
     - apt-get install curl -y
-    - cargo tarpaulin --out Xml
+    - cargo tarpaulin --out Xml -t 600 --ignore-tests --force-clean
+  after_script:
     - bash <(curl -s https://codecov.io/bash)
   cache:
     key: "$CI_COMMIT_REF_SLUG-cov"
