--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ test:coverage:
     - apt-get install curl git -y
     - cargo tarpaulin --out Xml -t 600 --ignore-tests --force-clean
   after_script:
-    - bash <(curl -s https://codecov.io/bash) -v
+    - bash <(curl -s https://codecov.io/bash) -X gcov
   tags:
     - linux-own
   allow_failure: true
