--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ test:coverage:
   script:
     - apt-get update
     - apt-get install curl git -y
-    - cargo tarpaulin --out Xml -t 600 --ignore-tests --force-clean
+    - cargo tarpaulin -t 600 --ignore-tests --force-clean
   after_script:
     - bash <(curl -s https://codecov.io/bash) -X gcov
   tags:
