ci: Remove non-linux benches
The non linux benchmarks were bogging down the pipeline too much.
Switched to only using linux benchmarks, and set them to run on my more powerful runner.

--- a/ci/linux.yml
+++ b/ci/linux.yml
@@ -29,10 +29,8 @@ build:linux:
 build:bench:linux:
   stage: bench
   image: "thatonelutenist/rustc-sccache:latest"
-  variables:
-    RUSTFLAGS: "-C target-cpu=native"
   script:
     - cargo bench
   tags:
-    - linux
+    - linux-own
   needs: []
