--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["all-encryption", "all-compression", "all-hmac"]
+default = ["all-chunk"]
 core = ["aes-ctr", "blake3", "zstd"]
 # Convience renames
 blake2b = ["blake2b_simd"]
@@ -25,6 +25,7 @@ chacha-family = ["chacha20"]
 all-encryption = ["aes-family", "chacha-family"]
 all-compression = ["zstd", "lz4", "lzma"]
 all-hmac = ["blake2b", "blake3", "sha2", "sha3"]
+all-chunk = ["all-encryption", "all-compression", "all-hmac"]
 
 [dependencies]
 aes = { version = "0.3.2", optional = true }
