--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -35,7 +35,7 @@ bincode = "1.2.1"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 fastcdc = "1.0.3"
-futures = { version = "0.3.4", default-features = false, features = ["std"] }
+futures = { version = "0.3.4", default-features = false, features = ["std","executor"] }
 futures-intrusive = "0.3.0"
 lazy_static = "1.4.0"
 lru = { version = "0.4.3", default-features = false }
