--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -35,6 +35,7 @@ num_cpus = "1.13.0"
 prettytable-rs = "0.8.0"
 read_input = "0.8.4"
 rpassword = "4.0.5"
+smol = { version = "0.1.1", features = ["tokio02"] }
 structopt = "0.3.14"
 tokio = { version = "0.2.18", features = ["full"] }
 tracing = "0.1.13"
