--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -36,11 +36,11 @@ byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 fastcdc = "1.0.3"
 futures = { version = "0.3.4", default-features = false, features = ["std","executor"] }
-futures-intrusive = "0.3.0"
 lazy_static = "1.4.0"
 lru = { version = "0.4.3", default-features = false }
 num_cpus = "1.13.0"
 petgraph = "0.5.0"
+piper = "0.1.1"
 rand = { version = "0.7.3", features = ["small_rng"] }
 rmp-serde = "0.14.3"
 semver = "0.9.0"
