--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -46,6 +46,7 @@ rmp-serde = "0.14.3"
 semver = "0.9.0"
 serde = { version = "1.0.106", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
+smol = "0.1.2"
 thiserror = "1.0.15"
 tokio = { version = "0.2.18", features = ["rt-core","rt-threaded", "macros", "sync", "blocking"] }
 tracing = "0.1.13"
