--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -34,6 +34,7 @@ base64 = "0.12.0"
 bincode = "1.2.1"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
+dashmap = "3.11.1"
 fastcdc = "1.0.3"
 futures = { version = "0.3.4", default-features = false, features = ["std","executor"] }
 lazy_static = "1.4.0"
