--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -32,6 +32,7 @@ clap = { version = "2.33.0", features = ["yaml"] }
 futures = "0.3.4"
 globset = "0.4.5"
 num_cpus = "1.13.0"
+piper = "0.1.1"
 prettytable-rs = "0.8.0"
 read_input = "0.8.4"
 rpassword = "4.0.5"
