--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -48,6 +48,7 @@ semver = "0.9.0"
 serde = { version = "1.0.106", features = ["derive", "rc"] }
 serde_bytes = "0.11.3"
 smol = "0.1.4"
+ssh2 = "0.8.0"
 thiserror = "1.0.16"
 tracing = "0.1.13"
 tracing-futures = "0.2.4"
