--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,16 @@ test:coverage:
     - linux-own
   allow_failure: true
   needs: []
+  services:
+    - name: atmoz/sftp:latest
+      alias: sftp
+      command:
+        - "asuran:asuran:::asuran"
+  variables:
+    ASURAN_SFTP_HOSTNAME: "sftp"
+    ASURAN_SFTP_PORT: "22"
+    ASURAN_SFTP_USER: "asuran"
+    ASURAN_SFTP_PASS: "asuran"
 
 pages:
   stage: doc
