--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -25,7 +25,7 @@ all-backend = ["asuran/all-backend"]
 
 [dependencies]
 anyhow = "1.0.28"
-asuran = { version = "^0.1.2-alpha.1", path = "../asuran", default-features = false }
+asuran = { version = "=0.1.2-alpha.1", path = "../asuran", default-features = false }
 async-trait = "0.1.30"
 chrono = "0.4.11"
 clap = { version = "2.33.0", features = ["yaml"] }
