--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -2,7 +2,7 @@
 name = "asuran-cli"
 description = "Deduplicating, secure, tamper resistant archiver"
 license = "BSD-2-Clause-Patent"
-version = "0.1.2-alpha.1"
+version = "0.1.2"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran-cli"
 homepage = "https://asuran.rs"
@@ -25,7 +25,7 @@ all-backend = ["asuran/all-backend"]
 
 [dependencies]
 anyhow = "1.0.28"
-asuran = { version = "=0.1.2-alpha.1", path = "../asuran", default-features = false }
+asuran = { version = "= 0.1.2", path = "../asuran", default-features = false }
 async-trait = "0.1.30"
 chrono = "0.4.11"
 clap = { version = "2.33.0", features = ["yaml"] }
