Revert "build: Change target features"
This reverts commit 9fbfcb55227e5276ec947e5eaefa4d129f781f4f.
I neglected to consider that my CI runners are on sandybridge

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,2 @@
 [build]
-rustflags = ["-C",
-            "target-feature=+aes,+ssse3,+sse4.1,+sse4.2,+avx,+avx2",
-            "-C",
-            "target-cpu=haswell"]
+rustflags = ["-C", "target-feature=+aes,+ssse3", "-C", "target-cpu=sandybridge"]
