--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -30,23 +30,22 @@ all-backend = [] # Placeholder for when we have features for backends
 asuran-chunker = { version = "= 0.1.3-alpha.1", path = "../asuran-chunker/", features = ["streams"] }
 asuran-core = { version = "= 0.1.3-alpha.1", path = "../asuran-core/", default-features = false }
 async-trait = "0.1.30"
-base64 = "0.12.0"
+base64 = "0.12.1"
 bincode = "1.2.1"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
-crossbeam = "0.7.3"
+crossbeam = { version = "0.7.3", default-features = false, features = ["crossbeam-channel"] }
 dashmap = "3.11.1"
-fastcdc = "1.0.3"
-futures = { version = "0.3.4", default-features = false, features = ["std","executor"] }
+futures = { version = "0.3.5", default-features = false, features = ["std"] }
 lazy_static = "1.4.0"
 lru = { version = "0.4.3", default-features = false }
 num_cpus = "1.13.0"
-petgraph = "0.5.0"
+petgraph = { version = "0.5.0", default-features = false }
 piper = "0.1.1"
-rand = { version = "0.7.3", features = ["small_rng"] }
+rand = "0.7.3"
 rmp-serde = "0.14.3"
 semver = "0.9.0"
-serde = { version = "1.0.106", features = ["derive", "rc"] }
+serde = { version = "1.0.110", features = ["derive"] }
 serde_bytes = "0.11.4"
 smol = "0.1.4"
 ssh2 = "0.8.1"
@@ -64,6 +63,7 @@ futures-await-test = "0.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 tempfile = "3.1.0"
+rand = { version = "0.7.3", features = ["small_rng"] }
 
 [[bench]]
 name = "chunkandstore"
