--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,5 @@
 [build]
-rustflags = ["-C", "target-feature=+aes,+ssse3", "-C", "target-cpu=sandybridge"]
+rustflags = ["-C",
+             "target-feature=+aes,+ssse3,+sse4.1,+sse4.2,+avx",
+             "-C",
+             "target-cpu=sandybridge"]
