--- a/asuran-chunker/Cargo.toml
+++ b/asuran-chunker/Cargo.toml
@@ -2,7 +2,7 @@
 name = "asuran-chunker"
 description = "A general API for describing types that can break data in to chunks in repeatable ways"
 license = "BSD-2-Clause-Patent"
-version = "0.1.3-alpha.1"
+version = "0.1.3"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran"
 homepage = "https://asuran.rs"
@@ -18,8 +18,8 @@ fastcdc = "1.0.3"
 futures = { version = "0.3.5", default-features = false, features = ["std"], optional = true }
 rand = "0.7.3"
 rand_chacha = "0.2.2"
-smol = { version = "0.1.4", optional = true }
-thiserror = "1.0.16"
+smol = { version = "0.1.5", optional = true }
+thiserror = "1.0.17"
 
 [dev-dependencies]
 criterion = "0.3.2"
