--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -2,7 +2,7 @@
 name = "asuran-cli"
 description = "Deduplicating, secure, tamper resistant archiver"
 license = "BSD-2-Clause-Patent"
-version = "0.1.3-alpha.1"
+version = "0.1.3"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran-cli"
 homepage = "https://asuran.rs"
@@ -24,9 +24,9 @@ all-chunk = ["asuran/all-chunk"]
 all-backend = ["asuran/all-backend"]
 
 [dependencies]
-anyhow = "1.0.28"
-asuran = { version = "= 0.1.3-alpha.1", path = "../asuran", default-features = false }
-async-trait = "0.1.30"
+anyhow = "1.0.30"
+asuran = { version = "= 0.1.3", path = "../asuran", default-features = false }
+async-trait = "0.1.31"
 chrono = "0.4.11"
 clap = { version = "2.33.1", features = ["yaml"] }
 futures = "0.3.5"
@@ -36,7 +36,7 @@ piper = "0.1.1"
 prettytable-rs = "0.8.0"
 read_input = "0.8.4"
 rpassword = "4.0.5"
-smol = "0.1.4"
+smol = "0.1.5"
 structopt = "0.3.14"
 tracing = "0.1.13"
 tracing-subscriber = "0.2.5"
