--- a/asuran-core/Cargo.toml
+++ b/asuran-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "asuran-core"
 license = "BSD-2-Clause-Patent"
-version = "0.1.3-alpha.1"
+version = "0.1.3"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran"
 homepage = "https://asuran.rs"
@@ -48,7 +48,7 @@ serde_bytes = "0.11.4"
 sha2 = { version = "0.8.1", optional = true }
 sha3 = { version = "0.8.2", optional = true }
 stream-cipher = "0.3.2"
-thiserror = "1.0.16"
+thiserror = "1.0.17"
 tracing = "0.1.13"
 uuid = "0.8.1"
 xz2 = { version = "0.1.6", optional = true }
