--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -2,7 +2,7 @@
 name = "asuran"
 description = "Deduplicating, encrypting, fast, and tamper evident archive format"
 license = "BSD-2-Clause-Patent"
-version = "0.1.3-alpha.1"
+version = "0.1.3"
 repository = "https://gitlab.com/asuran-rs/asuran/"
 documentation = "https://docs.rs/crate/asuran"
 homepage = "https://asuran.rs"
@@ -27,9 +27,9 @@ all-chunk = ["asuran-core/all-chunk"]
 all-backend = [] # Placeholder for when we have features for backends
 
 [dependencies]
-asuran-chunker = { version = "= 0.1.3-alpha.1", path = "../asuran-chunker/", features = ["streams"] }
-asuran-core = { version = "= 0.1.3-alpha.1", path = "../asuran-core/", default-features = false }
-async-trait = "0.1.30"
+asuran-chunker = { version = "= 0.1.3", path = "../asuran-chunker/", features = ["streams"] }
+asuran-core = { version = "= 0.1.3", path = "../asuran-core/", default-features = false }
+async-trait = "0.1.31"
 base64 = "0.12.1"
 bincode = "1.2.1"
 byteorder = "1.3.4"
@@ -47,9 +47,9 @@ rmp-serde = "0.14.3"
 semver = "0.9.0"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_bytes = "0.11.4"
-smol = "0.1.4"
+smol = "0.1.5"
 ssh2 = "0.8.1"
-thiserror = "1.0.16"
+thiserror = "1.0.17"
 tracing = "0.1.13"
 tracing-futures = "0.2.4"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
