--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -13,6 +13,8 @@ readme = "README.md"
 
 [features]
 default = ["all-chunk", "all-backend"]
+sftp = ["ssh2"]
+only-local-backends = ["all-chunk"]
 
 # Rexports of asuran-core features
 blake2b = ["asuran-core/blake2b"]
@@ -24,7 +26,7 @@ all-compression = ["asuran-core/all-compression"]
 all-hmac = ["asuran-core/all-hmac"]
 all-chunk = ["asuran-core/all-chunk"]
 # Groups of all of a type
-all-backend = [] # Placeholder for when we have features for backends
+all-backend = ["sftp"] # Placeholder for when we have features for backends
 
 [dependencies]
 asuran-chunker = { version = "= 0.1.4-alpha.1", path = "../asuran-chunker/", features = ["streams"] }
@@ -48,7 +50,7 @@ semver = "0.9.0"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_bytes = "0.11.4"
 smol = "0.1.5"
-ssh2 = "0.8.1"
+ssh2 = { version = "0.8.1", optional = true}
 thiserror = "1.0.17"
 tracing = "0.1.13"
 tracing-futures = "0.2.4"
