--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -38,7 +38,7 @@ piper = "0.1.1"
 prettytable-rs = "0.8.0"
 read_input = "0.8.4"
 rpassword = "4.0.5"
-smol = "0.1.5"
+smol = "=0.1.4"
 structopt = "0.3.14"
 tracing = "0.1.13"
 tracing-subscriber = "0.2.5"
