--- a/asuran-chunker/Cargo.toml
+++ b/asuran-chunker/Cargo.toml
@@ -18,8 +18,8 @@ fastcdc = "1.0.3"
 futures = { version = "0.3.5", default-features = false, features = ["std"], optional = true }
 rand = "0.7.3"
 rand_chacha = "0.2.2"
-smol = { version = "=0.1.4", optional = true }
-thiserror = "1.0.17"
+smol = { version = "0.1.7", optional = true }
+thiserror = "1.0.18"
 
 [dev-dependencies]
 criterion = "0.3.2"
