--- a/asuran-cli/Cargo.toml
+++ b/asuran-cli/Cargo.toml
@@ -26,7 +26,7 @@ sftp = ["asuran/sftp"]
 only-local-backends = ["asuran/only-local-backends"]
 
 [dependencies]
-anyhow = "1.0.30"
+anyhow = "1.0.31"
 asuran = { version = "= 0.1.4-alpha.1", path = "../asuran", default-features = false }
 async-trait = "0.1.31"
 chrono = "0.4.11"
@@ -38,9 +38,9 @@ piper = "0.1.1"
 prettytable-rs = "0.8.0"
 read_input = "0.8.4"
 rpassword = "4.0.5"
-smol = "=0.1.4"
+smol = "0.1.7"
 structopt = "0.3.14"
-tracing = "0.1.13"
+tracing = "0.1.14"
 tracing-subscriber = "0.2.5"
 
 [build-dependencies]
