--- a/asuran/Cargo.toml
+++ b/asuran/Cargo.toml
@@ -49,10 +49,10 @@ rmp-serde = "0.14.3"
 semver = "0.9.0"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_bytes = "0.11.4"
-smol = "=0.1.4"
-ssh2 = { version = "0.8.1", optional = true}
-thiserror = "1.0.17"
-tracing = "0.1.13"
+smol = "0.1.7"
+ssh2 = { version = "0.8.1", optional = true }
+thiserror = "1.0.18"
+tracing = "0.1.14"
 tracing-futures = "0.2.4"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 walkdir = "2.3.1"
